# rlm-mcp-server

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PRD.md  QUICKSTART.md  README.md  claude-code-config.json  docker-compose.yml  progress.txt  pyproject.toml
scripts/: connect.sh  deploy-dokploy.sh
src/rlm_mcp/: __init__.py  http_server.py  indexer.py  llm_client.py  pdf_parser.py  persistence.py  rate_limiter.py  repl.py  s3_client.py  server.py  tcp_bridge.py
src/rlm_mcp/services/: __init__.py  persistence_service.py  s3_guard.py
src/rlm_mcp/tools/: __init__.py  base.py  schemas.py
tests/: __init__.py  conftest.py  test_fixtures.py  test_http_server.py  test_indexer.py  test_pdf_parser.py  test_persistence.py  test_repl.py  test_s3_client.py
